welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: not found: value length
  while (nums(z)!= lookingFor && z<=length(nums)){
                                    ^